      rare situation in practice).

    o plot.phylo() now avoids plotting badly conformed trees that
      could lead to a crash (issue #133 on GitHub).

    o read.tree() failed when the Newick string lacked matching outer
      parentheses (issue #142 on GitHub).


OTHER CHANGES

    o 'knitr' has been added as a suggested package.



      		CHANGES IN APE VERSION 5.8-1


NEW FEATURES

    o write.nexus() has a new option, digitis = 10, similar to the one
      with the same name in write.tree(). The help page of the latter
      has been clarified (see PR #130 on GitHub).

    o kronoviz() has two new options, 'direction' and 'side', to add
      more flexibbility to the plot.


BUG FIXES

    o plot.phylo() shifted the coordinates when the tree was plotted
      left- or downwards (see PR #119 on GitHub).

    o Newick strings with a single tip and multiple nodes were not
      correctly parsed. Also, if a root edge was present it was not
      correctly decoded (see issue #124 on GitHub).

    o dist.nodes() returned a (meaningless) result for trees with no
      branch lengths (sometimes a segfault occurred). This function
      has now the option 'fail.if.no.length = FALSE' so that branch
      lengths, if absent in the tree, are fixed to one (with a
      warning). An error is returned if this option is set to FALSE.


OTHER CHANGES

    o Plotting circular trees has been improved (see PR #129 on GitHub).

    o axisPhylo(): the new default is axisPhylo(side = NULL) instead
      of axisPhylo(side = 1).



		CHANGES IN APE VERSION 5.8


NEW FEATURES

    o dist.topo() has a new option 'mc.cores'. With the default PH85
      distance, the gain of using several cores is visible with 200+
      trees. The internal code for the score distance has been
      improved and is twice faster with a single core, and 4-5 times
      faster with mc.cores = 2.

    o keep.tip() gains a '...' argument which is passed to drop.tip().