@@ -59,7 +59,7 @@ export(.compressTipLabel, .PlotPhyloEnv, .uncompressTipLabel,
        plot.phylo, plotBreakLongEdges, plotPhyloCoor, plotTreeTime,
        polar2rect, postorder, postprocess.prop.part, print.AAbin,
        print.DNAbin, print.phylo, prop.clades, prop.part, rbdtree,
-       rbind.DNAbin, rcoal, rDNAbin, read.caic, read.dna, read.evonet,
+       rbind.DNAbin, rcoal, rDNAbin, read.dna, read.evonet,
        read.FASTA, read.fastq, read.GenBank, read.UniProt, read.gff, read.nexus,
        read.nexus.data, read.tree, reconstruct, rect2polar,
        reorder.evonet, reorder.multiPhylo, reorder.phylo, reorderRcpp,
